# RoboRTS

./: .editorconfig  .gitignore  README.md
config/: roborts_dynamic_cfg.cfg  test
roborts_base/: CMakeLists.txt
roborts_base/chassis/: chassis.cpp  chassis.h
roborts_base/gimbal/: gimbal.cpp  gimbal.h
roborts_base/referee_system/: referee_system.cpp
roborts_base/roborts_sdk/protocol/: protocol.cpp  protocol_define.h
roborts_bringup/launch/: firefly_bringup.launch  firefly_bringup_sim.launch  firefly_bringup_sim_red2.launch  nx_bringup.launch  roborts_stage.launch
roborts_bringup/maps/: icra2020.yaml
roborts_bringup/rviz/: roborts.rviz
roborts_bringup/rviz/blue1/: roborts.rviz
roborts_bringup/rviz/blue2/: roborts.rviz
roborts_bringup/rviz/red1/: roborts.rviz
roborts_bringup/rviz/red2/: roborts.rviz
roborts_camera/: CMakeLists.txt  camera_base.h  camera_node.cpp  camera_node.h  camera_param.cpp  camera_param.h
roborts_camera/config/: 1  camera_param.prototxt
roborts_camera/mvs/: CMakeLists.txt  mvs_driver.cpp  mvs_driver.h
roborts_camera/proto/: camera_param.proto
roborts_camera/realsense/: CMakeLists.txt  camera_convert.cpp  camera_convert.h  realsense.cpp  realsense.h
roborts_camera/uvc/: uvc_driver.cpp  uvc_driver.h
roborts_common/include/interface/: CMakeLists.txt  dynamic_reconfigure_interface.cpp  dynamic_reconfigure_interface.h
roborts_common/include/io/: terminal_io.h
roborts_common/include/pid_controller/: CMakeLists.txt  pid_controller.h
roborts_common/include/utils/: CMakeLists.txt  utils.h
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  inflation_layer_config.prototxt  obstacle_layer_config.prototxt
roborts_costmap/config/blue1/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  static_layer_config.prototxt
roborts_costmap/config/blue2/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt
roborts_costmap/config/red1/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt  static_layer_config.prototxt
roborts_costmap/config/red2/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt
roborts_costmap/include/costmap/: static_layer.h
roborts_costmap/proto/: static_layer_setting.proto
roborts_costmap/src/: costmap_interface.cpp  obstacle_layer.cpp  static_layer.cpp
roborts_decision/: CMakeLists.txt  behavior_node.cpp  behavior_test.cpp
roborts_decision/behavior_tree/: behavior_node.h
roborts_decision/blackboard/: blackboard.cpp  blackboard.h  blackboard_common.h  blackboard_raw.cpp  blackboard_raw.h  enemy_robot.cpp  enemy_robot.h  my_robot.cpp  my_robot.h  robot_behaviors.cpp  robot_behaviors.h
roborts_decision/example_behavior/: attack_behavior.h  back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  patrol_behavior.h  pursue_and_attack_behavior.h  search_behavior.h  supply_behavior.h
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_control.cpp  gimbal_control.h  gimbal_executor.cpp  gimbal_executor.h
roborts_decision/interface/: roborts_dynamic_reconfigure.cpp  roborts_dynamic_reconfigure.h
roborts_detection/: CMakeLists.txt
roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_base.h  armor_detection_node.cpp  armor_detection_node.h  classifier.cpp  classifier.h
roborts_detection/armor_detection/constraint_set/: CMakeLists.txt  armor_box.cpp  armor_box.h  constraint_set.cpp  constraint_set.h  light_blob.cpp  light_blob.h  light_bolb.cpp  light_bolb.h  tail_blob.cpp  tail_blob.h
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_detection/image_publish/: CMakeLists.txt
roborts_detection/image_publish/src/: main.cpp
roborts_detection/util/: CMakeLists.txt  cv_toolbox.h
roborts_executor/: CMakeLists.txt  chassis_executor_action_behavior.cpp  gimbal_executor_action_behavior.cpp
roborts_executor/executor_action/: pid_controller_executor_action_server.cpp  pid_controller_executor_action_server.h
roborts_executor/launch/: roborts_executor_bringup.launch
roborts_executor/param/: chassis_executor_action.yaml  gimbal_executor_action.yaml
roborts_executor/pose_publisher/: pose_publisher_node.cpp  pose_publisher_node.h
roborts_localization/config/blue1/: localization.yaml
roborts_localization/config/blue2/: localization.yaml
roborts_localization/config/red1/: localization.yaml
roborts_localization/config/red2/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/action/: PIDControllerTowardAngular.action
roborts_msgs/msg/: ArmorDetected.msg
roborts_msgs/msg/referee_system/: BuffZoneStatus.msg
roborts_planning/global_planner/: global_planner_base.h  global_planner_node.cpp
roborts_planning/global_planner/a_star_planner/: a_star_planner.h
roborts_planning/local_planner/src/: local_planner_node.cpp  vel_converter.cpp
roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band (copy).prototxt  timed_elastic_band.prototxt
roborts_planning/local_planner/timed_elastic_band/config/red1/: timed_elastic_band.prototxt
